--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "typist",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Animated typing utility",
-  "main": "dist/typist.js",
+  "main": "dist/typist.min.js",
+  "module": "dist/typist.es.min.js",
   "scripts": {
     "rollup": "rollup --config",
     "build": "npm run rollup"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "eslint": "^7.18.0",
     "prettier": "^2.2.1",
-    "rollup": "^2.37.1"
+    "rollup": "^2.37.1",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
